--- a/PetServicesStore/bin/PetServicesStore.dll.config
+++ b/PetServicesStore/bin/PetServicesStore.dll.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 	<connectionStrings>
-		<add name="" connectionString=""/>
+		<add name="myConn" connectionString="Data Source=DESKTOP-7QM4SBI;Initial Catalog=PetServices;User ID=sa;Password=123456;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
